# LightYearGameCPP

./: CMakeLists.txt
LightYears/: CMakeLists.txt
LightYears/include/framework/: Application.h
LightYears/src/: main.cpp
LightYears/src/framework/: Application.cpp
